z-index fixes

--- a/wp-content/themes/vantage/partystart.css
+++ b/wp-content/themes/vantage/partystart.css
@@ -1005,9 +1005,9 @@ ul.job_listings li.job_listing a {
     left: 0;
     bottom: 0;
     right: 0;
-    -webkit-transition: all 300ms;
-    -moz-transition: all 300ms;
-    transition: all 300ms;
+    -webkit-transition: ease all 300ms;
+    -moz-transition: ease all 300ms;
+    transition: ease all 300ms;
 }
 #buddypress #members-list li:hover .member-filter{
     background-image: -webkit-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
@@ -1022,9 +1022,9 @@ ul.job_listings li.job_listing a {
     bottom: 0;
     right: 0;
     z-index:99;
-    -webkit-transition: all 300ms;
-    -moz-transition: all 300ms;
-    transition: all 300ms;
+    -webkit-transition: ease all 300ms;
+    -moz-transition: ease all 300ms;
+    transition: ease all 300ms;
 }
 #members-list li .musikertype {
 z-index:100!important;
